# cgear

./: .gitignore  cgear_install.iss  cgear_portable.iss  go.mod  go.sum  main.go
cmake/: cmake.go
cmd/: cgear.go  zel.go
cmd/commands/: commands.go
cmd/commands/count/: count.go
cmd/commands/env/: banner.go  env.go
cmd/commands/generate/: generate.go
cmd/commands/install/: install.go
cmd/commands/kit/: kit.go
cmd/commands/new/: app_contents.go  common_contents.go  contents.go  lib_contents.go  new.go  qt_contents.go
cmd/commands/pack/: pack.go
cmd/commands/run/: run.go
cmd/commands/test/: content.go  test.go
cmd/commands/version/: banner.go  version.go
config/: conf.go
cppproject/: .clang-format  CMakeLists.txt
cppproject/src/: CMakeLists.txt
env/: build_type.go  generator.go  kit.go  platform.go  toolchain.go
generate/: g.go  g_docs.go
internal/pkg/system/: system.go
logger/: logger.go
logger/colors/: colors.go  colorwriter.go  colorwriter_windows.go
test/: exec_test.go
tests/: cgear_test.go  exec_test.go  filepath_test.go  filetrim_test.go  get_msvc_test.go  input.txt  output.txt  repgex_test.go  template_test.go  tirmfile_test.go  word_test.go  zel_test.go
ui/select/: select.go
utils/: file.go  utils.go  version.go
